Update application to use new launcher base with branding
Replaces the existing application code with files from a new launcher base, updates the application name to "Wither Launcher", applies a new icon, and modifies the Discord link.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: c3eaa483-ce01-4ed9-b031-9380dbebc074
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: a683165d-a94f-43d0-9bb8-2d844464b3c4
Replit-Helium-Checkpoint-Created: true